RESOLVED FIXED50190
Cursor does not always change back to arrow when exiting image document
https://bugs.webkit.org/show_bug.cgi?id=50190
Summary Cursor does not always change back to arrow when exiting image document
Anders Carlsson
Reported 2010-11-29 16:52:43 PST
Cursor does not always change back to arrow when exiting image document
Attachments
Patch (5.38 KB, patch)
2010-11-29 16:55 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2010-11-29 16:53:15 PST
Anders Carlsson
Comment 2 2010-11-29 16:55:07 PST
Anders Carlsson
Comment 3 2010-11-29 16:58:48 PST
Note You need to log in before you can comment on or make changes to this bug.