Cursor does not always change back to arrow when exiting image document https://bugs.webkit.org/show_bug.cgi?id=50190 <rdar://problem/8665265>

Reviewed by Sam Weinig.

* Shared/mac/WebEventFactory.mm:
(WebKit::mouseEventTypeForEvent):
(WebKit::globalPointForEvent):
(WebKit::pointForEvent):
Handle the NSMouseEntered and NSMouseExited events.

* UIProcess/API/mac/WKView.mm:
(-[WKView initWithFrame:pageNamespaceRef:hiddenFromInjectedBundle:]):
We want entered and exited events for this tracking area.
Add mouseEntered and mouseExited handlers.

Canonical link: https://commits.webkit.org/63310@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72851 268f45cc-cd09-0410-ab3c-d52691b4dbfc